exports[`fontFace should respect the file format configuration object 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "src": "url(\"path/to/file.eot\"), url(\"path/to/file.svg\")",
  },
}
`;

exports[`fontFace should return a valid object when passed both a file-based source and multiple local sources 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "src": "local(\"sans-pro\"), local(\"sans pro\"), url(\"path/to/file.eot\"), url(\"path/to/file.woff2\"), url(\"path/to/file.woff\"), url(\"path/to/file.ttf\"), url(\"path/to/file.svg\")",
  },
}
`;

exports[`fontFace should return a valid object when passed both local and file-based sources 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "src": "local(\"sans-pro\"), url(\"path/to/file.eot\"), url(\"path/to/file.woff2\"), url(\"path/to/file.woff\"), url(\"path/to/file.ttf\"), url(\"path/to/file.svg\")",
  },
}
`;

exports[`fontFace should return a valid object when passed just a family and source 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "src": "url(\"path/to/file.eot\"), url(\"path/to/file.woff2\"), url(\"path/to/file.woff\"), url(\"path/to/file.ttf\"), url(\"path/to/file.svg\")",
  },
}
`;

exports[`fontFace should return a valid object when passed only local sources 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "src": "local(\"sans-pro\"), local(\"sans pro\")",
  },
}
`;

exports[`fontFace should set passed font configuration variables 1`] = `
Object {
  "@font-face": Object {
    "fontFamily": "Sans Pro",
    "fontStretch": "condensed",
    "fontStyle": "italic",
    "fontVariant": "small-caps",
    "fontWeight": "bold",
    "src": "url(\"path/to/file.eot\"), url(\"path/to/file.woff2\"), url(\"path/to/file.woff\"), url(\"path/to/file.ttf\"), url(\"path/to/file.svg\")",
    "unicodeRange": "U+26",
  },
}
`;

exports[`fontFace should throw an error when not passed a fontFilePath or localFonts 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cfontFace expects either the path to the font file(s) or a name of a local copy. However, you provided neither.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when not passed a value for fontFamily 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %crequires a %c1st parameter%c(%cfontFamily%c: %cstring%c). However, you did not pass %cfontFamily%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when not provided any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %crequires a %c1st parameter%c(%cfontFamily%c: %cstring%c). However, you did not pass %cfontFamily%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-array value for localFonts 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c8th parameter%c(%clocalFonts%c: %carray%c). However, you passed (%c\'sans-pro\'%c:%cstring%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontFamily 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c1st parameter%c(%cfontFamily%c: %cstring%c). However, you passed (%c\'100\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontFilePath 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c2nd parameter%c(%cfontFilePath%c: %cstring%c). However, you passed (%c\'100\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontStretch 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c3rd parameter%c(%cfontStretch%c: %cstring%c). However, you passed (%c\'true\'%c:%cboolean%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontStyle 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c4th parameter%c(%cfontStyle%c: %cstring%c). However, you passed (%c\'100\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontVariant 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c5th parameter%c(%cfontVariant%c: %cstring%c). However, you passed (%c\'100\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for fontWeight 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c6th parameter%c(%cfontWeight%c: %cstring%c). However, you passed (%c\'true\'%c:%cboolean%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`fontFace should throw an error when passed a non-string value for unicodeRange 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/fontFace.js --%c

fontFace %cexpects a %c9th parameter%c(%cunicodeRange%c: %cstring%c). However, you passed (%c\'26\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#fontFace%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
